# topic-lab

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mqtt.rs  storage.rs  types.rs  variables.rs
src/components/: ButtonCard.tsx  ButtonEditor.tsx  ConnectionEditor.tsx  ConnectionStatus.tsx  ConnectionSwitcher.tsx  Dashboard.tsx  MessageViewer.tsx  SetupWizard.tsx  VariablesPanel.tsx
src/contexts/: AppContext.tsx
src/hooks/: useDashboardKeyboard.ts
src/styles/: base.css  button-card.css  buttons.css  color-picker.css  connection-status.css  connection-switcher.css  dashboard.css  forms.css  loading.css  main.css  message-viewer.css  modal.css  setup-wizard.css  variables-panel.css
src/types/: index.ts
src/utils/: api.test.ts  api.ts  builtins.test.ts  builtins.ts  preferences.ts  variables.test.ts  variables.ts
