[package]
name = "mqtt-topic-lab"
version = "0.1.9"
description = "MQTT Topic Lab - Send saved commands via buttons"
authors = ["you"]
edition = "2021"

[lib]
name = "mqtt_topic_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = { version = "0.24", features = ["use-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "1"
regex = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

